# pro_game

./: .env.dist  .gitignore  Dockerfile  README.md  READMY.md  docker-compose.yml  manage.py  pyproject.toml
authentication/: serializers.py  urls.py  views.py
pro_game/: asgi.py  middleware.py  routing.py  urls.py  wsgi.py
pro_game/settings/: base.py  dev.py  prod.py
task/: apps.py  consumers.py  models.py  serializers.py  signals.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_alter_task_priority_alter_task_status.py
tests/: fixtures.py  test_task_crud.py
utils/: enum.py
